# Jessamine.jl

./: .gitignore  FreezePackages.jl  Notes.md  Project.toml  README.md  requirements.txt  test_python_interface.jl
.github/workflows/: documentation.yml
Working/: Manifest.toml  Project.toml
dev/: index.html  search_index.js
dev/reference/api/: index.html
dev/search/: index.html
docs/: Project.toml  make.jl  mkdocs.yml
docs/src/: index.md  python.md
docs/src/reference/: api.md
python/: pyproject.toml  run_evaluation.py  verify_complexity.py
python/pyjessamine/: __init__.py  julia_bridge.py  regressor.py  sympy_utils.py
python/tests/: test_regressor.py
srbench/: LICENSE  install.sh  metadata.yml  regressor.py
src/: AbstractLinearModelLayer.jl  AbstractModelLayer.jl  DebugOrInfo.jl  Evolution.jl  GenomeCore.jl  Jessamine.jl  LoggingTools.jl  MLJInside.jl  MLJOutside.jl  MachineLayer.jl  Mutation.jl  Operations.jl  Precompile.jl  PythonInterface.jl  RandomDuplicateDelete.jl  Recombination.jl  RidgeLayer.jl  SymPyForm.jl  SymbolicForm.jl  TablesUtil.jl  TimeSeriesLayer.jl  TimeSeriesRidgeLayer.jl
test/: Project.toml  Test-out-1.md  TestEvolution.jl  TestGenome.jl  TestRandomDupDel.jl  TestRidgeLayer.jl  TestTimeSeries.jl  runtests.jl
