[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjessamine"
version = "0.1.0"
description = "Python scikit-learn wrapper for Jessamine.jl symbolic regression"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
authors = [
    {name = "W. Garrett Mitchener"},
    {name = "Aidan Riordan"},
    {name = "Latherial Calbert"},
    {name = "Aiden Camilleri"},
]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "sympy>=1.10",
    "juliacall>=0.9.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyjessamine*"]
